[package]
name = "yellhole"
version = "0.1.0"
edition = "2021"
description = "A simple tumblelog."
license = "AGPL-3.0-or-later"
include = ["LICENSE", "README.md", "assets/*", "build.rs", "migrations/*", "src/**/*", "templates/*"]

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
axum = { version = "0.7.5", features = ["http2", "multipart"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
clap = { version = "4.5.7", features = ["deprecated", "derive", "env"] }
futures = "0.3.30"
include_dir = "0.7.4"
mime = "0.3.17"
p256 = "0.13.2"
pulldown-cmark = { version = "0.11.0", default-features = false, features = ["simd", "html"] }
quick-xml = "0.33.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
reqwest = { workspace = true, features = ["stream", "rustls-tls"] }
rusqlite = { version = "0.31.0", features = ["bundled", "time", "trace"] }
rusqlite_migration = { version = "1.2.0", features = ["from-directory", "alpha-async-tokio-rusqlite"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = { version = "3.8.1", features = ["base64"] }
sha2 = "0.10.8"
tempfile = "3.10.1"
thiserror = "1.0.61"
tikv-jemallocator = "0.5.4"
time = { version = "0.3.36", features = ["formatting", "serde-human-readable"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-rusqlite = "0.5.1"
tokio-util = "0.7.11"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "add-extension",
    "catch-panic",
    "fs",
    "limit",
    "request-id",
    "sensitive-headers",
    "set-header",
    "trace",
    "util",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tz-rs = "0.6.14"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.9.0", features = ["serde", "std", "v4"] }

[dev-dependencies]
atom_syndication = { version = "0.12.3", default-features = false }
reqwest = { workspace = true, features = ["json", "cookies", "multipart"] }

[workspace]
members = ["xtask"]

[workspace.dependencies]
reqwest = { version = "0.12.5", default-features = false }
