[package]
name = "yellhole"
version = "0.1.0"
edition = "2021"
description = "A simple tumblelog."
license = "AGPL-3.0-or-later"
include = ["LICENSE", "README.md", "assets/*", "build.rs", "migrations/*", "src/**/*", "templates/*"]

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["http2", "multipart"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
clap = { version = "4.5.21", features = ["deprecated", "derive", "env"] }
futures = "0.3.31"
include_dir = "0.7.4"
mime = "0.3.17"
p256 = "0.13.2"
pulldown-cmark = { version = "0.12.2", default-features = false, features = ["simd", "html"] }
quick-xml = "0.37.1"
rand = { version = "0.8.5", features = ["min_const_gen"] }
reqwest = { workspace = true, features = ["stream", "rustls-tls"] }
rinja = "0.3.5"
rusqlite = { version = "0.32.1", features = ["bundled", "time", "trace"] }
rusqlite_migration = { version = "1.3.1", features = ["from-directory", "alpha-async-tokio-rusqlite"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["base64"] }
sha2 = "0.10.8"
tempfile = "3.14.0"
thiserror = "2.0.3"
tikv-jemallocator = "0.6.0"
time = { version = "0.3.36", features = ["formatting", "serde-human-readable"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-rusqlite = "0.6.0"
tokio-util = "0.7.12"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = [
    "add-extension",
    "catch-panic",
    "fs",
    "limit",
    "request-id",
    "sensitive-headers",
    "set-header",
    "trace",
    "util",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tz-rs = "0.7.0"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "std", "v4"] }

[dev-dependencies]
atom_syndication = { version = "0.12.5", default-features = false }
reqwest = { workspace = true, features = ["json", "cookies", "multipart"] }

[workspace]
members = ["xtask"]

[workspace.dependencies]
reqwest = { version = "0.12.9", default-features = false }
