[package]
name = "yellhole"
version = "0.1.0"
edition = "2024"
description = "A simple tumblelog."
license = "AGPL-3.0-or-later"
include = ["LICENSE", "README.md", "assets/*", "build.rs", "migrations/*", "src/**/*", "templates/*"]

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
axum = { version = "0.8.4", features = ["http2", "multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
clap = { version = "4.5.39", features = ["deprecated", "derive", "env"] }
futures = "0.3.31"
include_dir = "0.7.4"
mime = "0.3.17"
p256 = "0.13.2"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["simd", "html"] }
quick-xml = "0.37.5"
rand = { version = "0.8.5", features = ["min_const_gen"] }
reqwest = { workspace = true, features = ["stream", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled", "time", "trace"] }
rusqlite_migration = { version = "1.3.1", features = ["from-directory", "alpha-async-tokio-rusqlite"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["base64"] }
sha2 = "0.10.9"
tempfile = "3.20.0"
thiserror = "2.0.12"
tikv-jemallocator = "0.6.0"
time = { version = "0.3.41", features = ["formatting", "serde-human-readable"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-rusqlite = "0.6.0"
tokio-util = "0.7.15"
tower = "0.5.2"
tower-http = { version = "0.6.5", features = [
    "add-extension",
    "catch-panic",
    "fs",
    "limit",
    "request-id",
    "sensitive-headers",
    "set-header",
    "trace",
    "util",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tz-rs = "0.7.0"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "std", "v4"] }

[dev-dependencies]
atom_syndication = { version = "0.12.7", default-features = false }
reqwest = { workspace = true, features = ["json", "cookies", "multipart"] }

[workspace]
members = ["xtask"]

[workspace.dependencies]
reqwest = { version = "0.12.18", default-features = false }
